--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RECORRIDO_FIA_M",
+  "name": "mobile-usmpV2",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
